credit-dispute-reg-z-calculated-glue/target/classes/META-INF/fabric8/openshift/credit-dispute-reg-z-calculated-glue-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/git-commit: 8b5061cbb9b99956cbd13ccfce7dc1d854e9e387
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: master
    prometheus.io/scrape: "true"
    prometheus.io/port: "9779"
  labels:
    expose: "true"
    app: credit-dispute-reg-z-calculated-glue
    provider: fabric8
    version: 1.0.0.0
    group: org.example
  name: credit-dispute-reg-z-calculated-glue
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: credit-dispute-reg-z-calculated-glue
    provider: fabric8
    group: org.example
