credit-dispute-reg-z-calculated-glue/target/classes/META-INF/fabric8/openshift/credit-dispute-reg-z-calculated-glue-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: credit-dispute-reg-z-calculated-glue
    provider: fabric8
    version: 1.0.0.0
    group: org.example
  name: credit-dispute-reg-z-calculated-glue
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: credit-dispute-reg-z-calculated-glue
